Fix typo in nextQstion function call

--- a/MusikFixV1.html
+++ b/MusikFixV1.html
@@ -571,7 +571,7 @@
       <button class="ctrl-btn" onclick="setMode('random')" id="btn-random">🎲 Zufall</button>
     </div>
     <div class="control-row">
-      <button class="ctrl-btn big" onclick="nextQstion()">▶ Nächste Aufgabe</button>
+      <button class="ctrl-btn big" onclick="nextQuestion()">▶ Nächste Aufgabe</button>
       <button class="ctrl-btn" onclick="revealAnswer()">👁 Lösung zeigen</button>
       <button class="ctrl-btn" onclick="resetQuiz()">↺ Zurücksetzen</button>
     </div>
