--- a/MusikFixV1.html
+++ b/MusikFixV1.html
@@ -903,7 +903,7 @@ function selectCard(el, type) {
 function revealAnswer() {
   if (!currentTriad) return;
   
-  // 🔥 JETZT erst die Statistik für den TYP erhöhen!
+  // Niklas ist dumm
   stats[currentTriad.type]++;
   
   // Statistik-Anzeige aktualisieren
